fix reference homepage widget word wrapping and flow

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -18,6 +18,9 @@
 .libchat_offline{
   display: none !important;
 }
+#libchat_776a12eb7834f00b1664afc3f902f086 button.libchat_online{
+  display: block;
+}
 
 .btn, .searchquery{
     margin-top: 1em;
@@ -70,18 +73,18 @@
   display: block;
 }
 .reference-text{
+  width: 55%;
   float: left;
-}
-.reference-text > a{
-  clear: both;
-  padding-top: 1rem;
   display: block;
-  border: none;
+  overflow-wrap: break-word;
+}
+.reference-picture{
+  display: block;
 }
 .reference-picture > img{
-  height: 6rem;
+  max-height: 7rem;
   width: auto;
-  float: right;
+  padding-left: 0.5rem;
 }
 .pull-left{
   width:50%;
